--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -23,16 +23,14 @@
             android:id="@+id/action_homeFragment_to_menuFragment"
             app:destination="@id/menuFragment" />
         <argument
-            android:name="homeId"
-            app:argType="string"
-            android:defaultValue=""
-            />
+            android:name="homeModel"
+            app:argType="com.chorey.data.HomeModel"
+            app:nullable="true"
+            android:defaultValue="@null" />
+        <action
+            android:id="@+id/action_homeFragment_to_createChoreDialog"
+            app:destination="@id/createChoreDialog" />
     </fragment>
-    <dialog
-        android:id="@+id/addHomeDialog"
-        android:name="com.chorey.dialog.AddHomeDialog"
-        android:label="dialog_add_home"
-        tools:layout="@layout/dialog_add_home" />
     <dialog
         android:id="@+id/createNewHomeDialog"
         android:name="com.chorey.dialog.CreateHomeDialog"
@@ -43,4 +41,15 @@
         android:name="com.chorey.dialog.JoinHomeDialog"
         android:label="dialog_join_home"
         tools:layout="@layout/dialog_join_home" />
+    <dialog
+        android:id="@+id/createChoreDialog"
+        android:name="com.chorey.dialog.CreateChoreDialog"
+        android:label="dialog_create_chore"
+        tools:layout="@layout/dialog_create_chore" >
+        <argument
+            android:name="homeModel"
+            app:argType="com.chorey.data.HomeModel"
+            app:nullable="true"
+            android:defaultValue="@null" />
+    </dialog>
 </navigation>
