--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,6 @@
     <dimen name="chore_list_item_height">30dp</dimen>
     <dimen name="large_text_size">36sp</dimen>
     <dimen name="medium_text_size">20sp</dimen>
+    <dimen name="icon_size">45dp</dimen>
 
 </resources>
