--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,23 +14,6 @@
             android:id="@+id/action_menu_to_home"
             app:destination="@id/homeFragment" />
     </fragment>
-    <fragment
-        android:id="@+id/homeFragment"
-        android:name="com.chorey.HomeFragment"
-        android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
-        <action
-            android:id="@+id/action_homeFragment_to_menuFragment"
-            app:destination="@id/menuFragment" />
-        <argument
-            android:name="homeModel"
-            app:argType="com.chorey.data.HomeModel"
-            app:nullable="true"
-            android:defaultValue="@null" />
-        <action
-            android:id="@+id/action_homeFragment_to_createChoreDialog"
-            app:destination="@id/createChoreDialog" />
-    </fragment>
     <dialog
         android:id="@+id/createNewHomeDialog"
         android:name="com.chorey.dialog.CreateHomeDialog"
@@ -52,4 +35,21 @@
             app:nullable="true"
             android:defaultValue="@null" />
     </dialog>
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.chorey.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_homeFragment_to_menuFragment"
+            app:destination="@id/menuFragment" />
+        <argument
+            android:name="homeModel"
+            android:defaultValue="@null"
+            app:argType="com.chorey.data.HomeModel"
+            app:nullable="true" />
+        <action
+            android:id="@+id/action_homeFragment_to_createChoreDialog"
+            app:destination="@id/createChoreDialog" />
+    </fragment>
 </navigation>
