--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -45,7 +45,6 @@
         android:text="@string/home_all_chores_text"
         app:layout_constraintTop_toBottomOf="@id/homeFragmentTopLayout"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -68,7 +67,7 @@
         android:id="@+id/allChoresRecycler"
         style="@style/RecyclerStyleLarge"
         tools:ignore="MissingConstraints"
-        app:layout_constraintVertical_bias="0.45"
+        app:layout_constraintTop_toBottomOf="@id/homeRecyclerTitle"
         >
     </androidx.recyclerview.widget.RecyclerView>
 
