--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -44,6 +44,8 @@
         android:layout_height="wrap_content"
         android:text="@string/home_all_chores_text"
         app:layout_constraintTop_toBottomOf="@id/homeFragmentTopLayout"
+        app:layout_constraintBottom_toTopOf="@id/allChoresRecycler"
+        android:layout_marginBottom="10dp"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="20dp"
         android:textSize="16sp"
