--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -36,6 +36,18 @@
             android:minWidth="0dp"
             android:minHeight="0dp"
             />
+
+        <ImageView
+            android:id="@+id/homeToMenuButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/home_item_place_holder"
+            style="?android:attr/buttonBarButtonStyle"
+            android:minWidth="0dp"
+            android:minHeight="0dp"
+            android:src="@mipmap/home_icon"
+            android:layout_marginStart="20dp"
+            />
     </LinearLayout>
 
     <TextView
@@ -105,7 +117,7 @@
             />
 
         <Button
-            android:id="@+id/homeToMenuButton"
+            android:id="@+id/homeChoreButton"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_weight="1"
