--- a/app/src/main/res/layout/dialog_chore_detail.xml
+++ b/app/src/main/res/layout/dialog_chore_detail.xml
@@ -20,6 +20,18 @@
         android:text="@string/chore_detail_title_create"
         android:textSize="@dimen/medium_text_size" />
 
+    <ImageButton
+        android:id="@+id/createChoreCancelButton"
+        style="?attr/borderlessButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/note_detail_cancel_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@mipmap/ic_cancel_round"
+        android:minWidth="0dp"
+        android:minHeight="0dp"
+        />
     <TextView
         android:id="@+id/choreTemplateText"
         android:layout_width="wrap_content"
@@ -124,11 +136,11 @@
         >
 
         <Button
-            android:id="@+id/createChoreCancelButton"
+            android:id="@+id/createChoreRemoveButton"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/create_home_no" />
+            android:text="@string/create_chore_remove_button" />
 
         <Button
             android:id="@+id/createChoreCreateButton"
