--- a/app/src/main/res/layout/note_recycler_row.xml
+++ b/app/src/main/res/layout/note_recycler_row.xml
@@ -30,6 +30,16 @@
                 android:padding="10dp"
                 android:text="@string/home_name_placeholder"
                 />
+
+            <TextView
+                android:id="@+id/noteRecyclerAuthor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/noteRecyclerContent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_margin="10dp"
+                android:paddingBottom="5dp"
+                android:text="@string/home_name_placeholder" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
