--- a/app/src/main/res/layout/chore_spinner_item.xml
+++ b/app/src/main/res/layout/chore_spinner_item.xml
@@ -1,6 +1,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
     android:maxLines="1"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/large_text_size"
+    android:padding="5dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:ellipsize="marquee" />
