--- a/app/src/main/res/layout/dialog_chore_detail.xml
+++ b/app/src/main/res/layout/dialog_chore_detail.xml
@@ -144,30 +144,35 @@
         android:layout_marginTop="20dp"
         android:text="@string/chore_detail_time_to_complete" />
 
-    <EditText
-        android:id="@+id/choreDetailTimeToDo"
+
+    <TextView
+        android:id="@+id/choreDetailCompleteTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/choreDetailTimeToDoText"
+        android:layout_marginStart="20dp"
+        android:text="@string/chore_detail_due_time_hint"
         app:layout_constraintBottom_toBottomOf="@id/choreDetailTimeToDoText"
         app:layout_constraintStart_toEndOf="@id/choreDetailTimeToDoText"
-        android:layout_marginStart="20dp"
-        android:ems="10"
-        android:inputType="number"
-        android:maxWidth="50dp"
-        />
+        app:layout_constraintTop_toTopOf="@id/choreDetailTimeToDoText" />
 
-    <Spinner
-        android:id="@+id/choreCompleteTimeSpinner"
+    <TextView
+        android:id="@+id/choreDetailRewardText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        app:layout_constraintTop_toTopOf="@id/choreDetailTimeToDo"
-        app:layout_constraintBottom_toBottomOf="@id/choreDetailTimeToDo"
-        app:layout_constraintStart_toEndOf="@id/choreDetailTimeToDo"
-        android:spinnerMode="dropdown"
-        />
+        app:layout_constraintTop_toBottomOf="@id/choreDetailTimeToDoText"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="20dp"
+        android:text="@string/chore_detail_reward" />
 
+    <TextView
+        android:id="@+id/choreDetailPoints"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/choreDetailRewardText"
+        app:layout_constraintBottom_toBottomOf="@id/choreDetailRewardText"
+        app:layout_constraintStart_toEndOf="@id/choreDetailRewardText"
+        android:layout_marginStart="20dp"
+        android:text="" />
 
     <LinearLayout
         android:id="@+id/createChoreButtonLayout"
@@ -197,25 +202,27 @@
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 <!-- TODO: leftover code for templates -->
-    <!--    <TextView-->
-    <!--        android:id="@+id/choreTemplateText"-->
+    <!--    <EditText-->
+    <!--        android:id="@+id/choreDetailTimeToDo"-->
     <!--        android:layout_width="wrap_content"-->
     <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_marginEnd="10dp"-->
-    <!--        app:layout_constraintEnd_toStartOf="@id/choreTemplateSpinner"-->
-    <!--        app:layout_constraintTop_toTopOf="@id/createChoreNameInput"-->
-    <!--        app:layout_constraintBottom_toBottomOf="@id/createChoreNameInput"-->
-    <!--        android:text="@string/chore_detail_spinner_text"-->
+    <!--        app:layout_constraintTop_toTopOf="@id/choreDetailTimeToDoText"-->
+    <!--        app:layout_constraintBottom_toBottomOf="@id/choreDetailTimeToDoText"-->
+    <!--        app:layout_constraintStart_toEndOf="@id/choreDetailTimeToDoText"-->
+    <!--        android:layout_marginStart="20dp"-->
+    <!--        android:ems="10"-->
+    <!--        android:inputType="number"-->
+    <!--        android:maxWidth="50dp"-->
     <!--        />-->
 
-
     <!--    <Spinner-->
-    <!--        android:id="@+id/choreTemplateSpinner"-->
+    <!--        android:id="@+id/choreCompleteTimeSpinner"-->
     <!--        android:layout_width="wrap_content"-->
     <!--        android:layout_height="wrap_content"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="@id/createChoreNameInput"-->
-    <!--        app:layout_constraintBottom_toBottomOf="@id/createChoreNameInput"-->
+    <!--        android:layout_marginStart="20dp"-->
+    <!--        app:layout_constraintTop_toTopOf="@id/choreDetailTimeToDo"-->
+    <!--        app:layout_constraintBottom_toBottomOf="@id/choreDetailTimeToDo"-->
+    <!--        app:layout_constraintStart_toEndOf="@id/choreDetailTimeToDo"-->
     <!--        android:spinnerMode="dropdown"-->
     <!--        />-->
 
